fixing dependency problems, setting timeout for connection for retrofit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     </string>
     <string name="saved_access_token">Saved_token</string>
     <string name="default_access_token">No_access</string>
+    
+    <string name="shared_preferences">Shared_preferences</string>
 
 
 
