saving username and changing in the nav_bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,10 +26,11 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="saved_access_token">Saved_token</string>
-    <string name="default_access_token">No_access</string>
+    <string name="default_access">No_access</string>
     
     <string name="shared_preferences">Shared_preferences</string>
+    <string name="saved_access_token">Saved_token</string>
+    <string name="saved_username">Username</string>
 
 
 
