--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="title_activity_login">Searchat</string>
 
-    <!-- Strings related to login -->
+    <!-- Strings related to login view-->
     <string name="prompt_username">Username</string>
+    <string name="or_text">Or</string>
+    <string name="sign_up_button">Sign UP</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -27,11 +29,22 @@
         completions."
     </string>
     <string name="default_access">No_access</string>
-    
+
     <string name="shared_preferences">Shared_preferences</string>
     <string name="saved_access_token">Saved_token</string>
     <string name="saved_username">Username</string>
 
+
+    <!-- String related to the sign up view -->
+    <string name="signup_name">Name</string>
+    <string name="signup_last_name">Last Name</string>
+    <string name="signup_email">Email</string>
+    <string name="signup_username">Username</string>
+    <string name="signup_password">Password</string>
+    <!-- Strings related to the sign up java-->
+    <string name="signup_err_email">The Email must contain -@- and -.-</string>
+    <string name="signup_err_cant_add_user">Ups, cant create a new user.</string>
+    <string name="signup_err_username_already_created">Username already created</string>
 
 
 </resources>
