--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,8 @@
     <string name="editProfile">Edit profile</string>
     <string name="signOut">Sign Out</string>
 
+    <!-- String for profile information edit -->
+    <string name="profile_information_name">Name</string>
+
 
 </resources>
