--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,7 @@
         <item>French</item>
     </string-array>
 
+    <string name="cancel">Cancel</string>
+    <string name="save_profile">Save</string>
+
 </resources>
