--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,11 @@
     <string name="cancel">Cancel</string>
     <string name="save_profile">Save</string>
 
+    <!-- String for create new event-->
+
+    <string name="new_event_name">Name</string>
+    <string name="new_event_description">Description</string>
+    <string name="new_event_date">Date</string>
+
+
 </resources>
